--- a/css/styles.css
+++ b/css/styles.css
@@ -764,3 +764,65 @@ section {
   background: #FFFFFF;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+/* FORM */
+.form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: #212121;
+  display: block;
+  margin-bottom: 12px;
+}
+
+.form-label-group {
+  display: block;
+  margin-bottom: 10px;
+  width: 448px;
+  height: 58px;
+  text-align: start;
+}
+
+.form-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  padding: 12px 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: none;
+  padding-left: 42px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-icon {
+  position: relative;
+  bottom: 18px;
+  left: 12px;
+  transform: translateY(-50%);
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-fields-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--color-primary);
+  margin-bottom: 4px;
+}
