--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,19 @@ section {
   padding: 0 0 94px 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 /* HEADER STARTS */
 /* HEADER GLobal */
 .header {
@@ -737,6 +750,7 @@ section {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 40px;
 }
 
 .backdrop.is-hidden .modal {
@@ -778,22 +792,20 @@ section {
 }
 
 .form-label-group {
-  display: block;
-  margin-bottom: 10px;
   width: 448px;
   height: 58px;
+  display: block;
+  margin-bottom: 10px;
   text-align: start;
 }
 
-.form-comment {
-  width: 100%;
-  height: 120px;
-  resize: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  outline: none;
-  padding: 12px 16px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.form-fields-text {
+  display: block;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--color-primary);
+  margin-bottom: 4px;
 }
 
 .form-input {
@@ -813,16 +825,72 @@ section {
   bottom: 18px;
   left: 12px;
   transform: translateY(-50%);
-  fill: #000000;
+  fill: var(--logo-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-fields-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
+.form-comment {
+  display: block;
+  margin-bottom: 20px;
+}
+
+textarea {
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  width: 448px;
+  padding: 12px 16px;
+}
+
+.form-text {
+  width: 100%;
+  height: 120px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-policy {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.policy-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: var(--color-primary);
-  margin-bottom: 4px;
+}
+
+.policy-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--color-brand)
+}
+
+.button-form {
+  display: block;
+  width: 200px;
+  background: #188CE8;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  border-radius: 4px;
+  border: none;
+  padding: 10px 55px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.checkbox-input {
+  appearance: none;
 }
