--- a/css/styles.css
+++ b/css/styles.css
@@ -47,19 +47,6 @@ section {
   padding: 0 0 94px 0;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 /* HEADER STARTS */
 /* HEADER GLobal */
 .header {
@@ -849,28 +836,69 @@ textarea {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-policy {
+/* .form-policy {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+} */
+
+.checkbox-input {
+  appearance: none;
 }
 
-/* .policy-text {
+.checkbox-input:checked + .checkbox-label {
+  color: red;
+}
+
+.checkbox-label {
+  position: relative;
+  padding-left: 28px;
+}
+
+.checkbox-label::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 20px;
+  height: 15px;
+  border: 1px solid violet;
+  border-radius: 2px;
+  content: "";
+}
+
+.checkbox-label::after {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 10px;
+  height: 5px;
+  border: 1px solid violet;
+  border-radius: 2px;
+  content: "";
+  background-color: blue;
+  opacity: 0;
+}
+
+.checkbox-input:checked + .checkbox-label::after {
+  opacity: 1;
+}
+
+.checkbox-label {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--color-primary);
-} */
+}
 
-/* .policy-link {
+.checkbox-link {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration-line: underline;
   color: var(--color-brand)
-} */
+}
 
 .button-form {
   display: block;
@@ -891,6 +919,15 @@ textarea {
   margin-right: auto;
 }
 
-.checkbox-input {
-  appearance: none;
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
