--- a/css/styles.css
+++ b/css/styles.css
@@ -903,6 +903,7 @@ textarea {
   border-radius: 4px;
   width: 448px;
   padding: 12px 16px;
+  display: block;
 }
 
 .form-text {
@@ -951,7 +952,7 @@ textarea {
 .button-form {
   display: block;
   width: 200px;
-  background: #188CE8;
+  background-color: var(--color-brand);
   box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
   border-radius: 4px;
   border: none;
@@ -965,6 +966,17 @@ textarea {
   color: #FFFFFF;
   margin-left: auto;
   margin-right: auto;
+  cursor: pointer;
+}
+
+.button-form:hover,
+.button-form:focus {
+  background-color: #188ce8;
+}
+
+.close-icon:hover,
+.close-icon:focus {
+  fill: var(--color-brand);
 }
 
 /* CHECKBOX */
@@ -976,20 +988,25 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: left;
-  border: 2px solid #212121;
+  border: 3px solid #212121;
   border-radius: 2px;
   background-color: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .terms-checked {
-  fill: var(--color-bcg-primary);
+  fill: var(--color-brand);
   opacity: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.checkbox:checked + .terms-icon .terms-checked {
+  fill: var(--color-brand);
+  opacity: 1;
+}
+
 .checkbox:checked + .terms-icon {
-  background-color: var(--color-brand);
+  border: none;
 }
 
 .checkbox:focus + .terms-icon {
